Make mobile look presentable & fix spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@ body {
   overflow-y: scroll;
 }
 
+/* for debugging */
+/* * {
+  border-style: solid;
+  border-width: 0.1mm;
+  border-color: red;
+} */
+
 a {
   color: #1a0dab;
 }
